# Rigatoni

./: .gitignore  404.html  README.md  data.json  index.html  mkdocs.yml  objects.inv  pyproject.toml  requirements.txt  sample_messages.json  sitemap.xml  test_geometry.py  test_server.py
.github/workflows/: continuous_integration.yml  test.yml
api_reference/delegates/: index.html
api_reference/geometry/: index.html
basic_usage/: index.html
contributing/: index.html
docs/: .pages  basic_usage.md  contributing.md  index.md  install.md  noodles.md  quick_start.md
htmlcov/: d_03ad4798609b4ca9___init___py.html  d_03ad4798609b4ca9_byte_server_py.html  d_03ad4798609b4ca9_geometry_creation_py.html  d_03ad4798609b4ca9_geometry_objects_py.html  d_03ad4798609b4ca9_methods_py.html  d_03ad4798609b4ca9_objects_py.html  d_a44f0ac069e85531_test_core_py.html  d_cf94194ae8f9cfb8___init___py.html  d_cf94194ae8f9cfb8_byte_server_py.html  d_cf94194ae8f9cfb8_core_py.html  d_cf94194ae8f9cfb8_delegates_py.html  d_cf94194ae8f9cfb8_noodle_objects_py.html  index.html  status.json
install/: index.html
noodles/: index.html
pyserver/: __init__.py  core.py  exceptions.py  interface.py  noodle_objects.py  server.py
quick_start/: index.html
rigatoni/: __init__.py  core.py  delegates.py  interface.py  noodle_objects.py  server.py
search/: search_index.json
tests/: clients.py  context.py  data.csv  requirements.txt  sample_messages.json  servers.py  test_byte_server.py  test_core.py  test_geometry.py  test_geometry_creation.py  test_noodle_objects.py  test_server.py
(+18 files in other folders)
