[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "rigatoni"
authors = [
    {name = "Alex Racapé"},
]
dynamic = ["version", "description"]
readme = "README.md"
requires-python = ">=3.8"
keywords = ["noodles", "cbor", "Websockets", "server", "NOODLES"]
license = {text = "MIT"}
classifiers = [
    "Intended Audience :: Science/Research",
    "Programming Language :: Python :: 3",
    "Topic :: Scientific/Engineering :: Visualization"
]
dependencies = [
    "websockets==11.0.3",
    "cbor2==5.4.6",
    "pydantic==2.2.0",
]

[project.optional-dependencies]
geometry = [
    "numpy",
    "meshio"
]
testing = [
    "pytest",
    "penne",
    "pandas",
    "matplotlib",
    "meshio",
    "pymeshlab"
]

[tool.pytest.ini_options]
testpaths = ["tests"]
log_cli = true

[project.urls]
Source = "https://github.com/InsightCenterNoodles/Rigatoni"
Documentation = "https://insightcenternoodles.github.io/Rigatoni/"